iotapp/iotapp-controller/K8s/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: iotapp-server-dr
spec:
  host: iotapp-server
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
