iotapp/iotapp-controller/K8s/encoder-to-gwi.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: encoder-to-gwi
spec:
  hosts:
  - iotapp-encoder
  http:
  - match:
    - port: 9100
    route:
    - destination:
        host: iotapp-gwi
        port:
          number: 8181
