iotapp/iotapp-controller/K8s/istio-reroute.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: gwf1-to-encoder
spec:
  hosts:
  - iotapp-gwf1
  http:
  - match:
    - sourceLabels:
        app: iotapp-gwf1
    route:
    - destination:
        host: iotapp-encoder
        port:
          number: 9100
